# scorecardutils

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml  tests.yml
notebooks/: 0.data_creation_script.ipynb  1.EDA.ipynb  Modelling_script.ipynb
src/scorecardutils/: BivariatePlot.py  __init__.py  evaluation_metrics.py  feature_selection.py  utils.py
tests/: conftest.py
tests/unit/: test_evaluation_metrics.py
