[project]
name = "scorecardutils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sandip Khaire", email = "sandipkhaire007@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "feature-engine>=1.8.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shap>=0.47.2",
    "xgboost>=3.0.0",
]

[project.scripts]
scorecardutils = "scorecardutils:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
]
